--- a/TrangChiTietSanPham.html
+++ b/TrangChiTietSanPham.html
@@ -218,7 +218,7 @@
         <div id="tygh_content">
             <div id="breadcrumbs">
                 <span>
-                    <a href="TrangChu.html">Trang chủ</a> > <a href="#">Sách Chuyên Ngành</a> > <a href="#">Lịch sử, địa
+                    <a href="index.html">Trang chủ</a> > <a href="#">Sách Chuyên Ngành</a> > <a href="#">Lịch sử, địa
                         lý</a> >
                 </span><br>
                 <span>___________________________________________________________________________
