--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Vinabook - hiệu sách online trực tuyến cho mọi người</title>
     <link rel="icon" type="images/x-icon" href="HinhAnh/logo.png" />
-    <link rel="stylesheet" type="text/css" href="TrangChu.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <script type="text/javascript" src="myScript.js"></script>
     <script type="text/javascript" src="jquery-3.6.4.min.js"></script>
     <script>
