Update trang chu

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                             style="width: 30px; height: 30px;margin-top: 7px;float: left;">
                         <a href="#" style="color: #f3f3f3;width: 150px; margin-left: 60px;">Danh Mục Sách</a>
                         <ul class="sub-menu">
-                            <li><a href="">Sách Tiếng Việt</a>
+                            <li><a href="#" style="padding: 0px; padding-left: 15px;padding-bottom: 5px;">Sách Tiếng Việt</a>
                                 <ul class="sub-menu">
-                                    <li><a href="">Văn Học</a>
+                                    <li><a href="#" style="padding: 0px;padding-left: 15px;padding-bottom: 5px;">Văn Học</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">Tác Phẩm Kinh Điển</a></li>
+                                            <li><a href="" style="height: 20px;padding: 0px;padding-left: 15px;margin-top: 0px;">Tác Phẩm Kinh Điển</a></li>
                                             <li><a href="">Tiểu Thuyết</a></li>
                                             <li><a href="">Truyện Ngắn - Tản Văn - Tạp Văn</a></li>
                                             <li><a href="">Light Novel</a></li>
@@ -81,86 +81,86 @@
                                             <li><a href="">Truyện Cổ Tích - Ngụ Ngôn</a></li>
                                             <li><a href="">Huyền Bí - Giả Tưởng - Kinh Dị</a></li>
                                             <li><a href="">Phóng Sự - Ký Sự - Phê Bình Văn Học</a></li>
-                                            <li><a href="">Tác Giả - Tác Phẩm</a></li>
+                                            <li><a href="" style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">Tác Giả - Tác Phẩm</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Thiếu Nhi</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">Truyện Thiếu Nhi</a></li>
+                                            <li><a href=""style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">Truyện Thiếu Nhi</a></li>
                                             <li><a href="">Bách Khoa Tri Thức</a></li>
                                             <li><a href="">Manga - Comic</a></li>
                                             <li><a href="">Kiến Thức - Kỹ Năng Sống</a></li>
                                             <li><a href="">Tô Màu - Luyện Chữ - Dán Hình</a></li>
                                             <li><a href="">Từ Điển Thiếu Nhi</a></li>
-                                            <li><a href="">Phát Triển Kỹ Năng - Trí Tuệ Cho Trẻ</a></li>
+                                            <li><a href=""style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">Phát Triển Kỹ Năng - Trí Tuệ Cho Trẻ</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Kinh Tế</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">QUẢN TRỊ - LÃNH ĐẠO</a></li>
+                                            <li><a href="" style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">QUẢN TRỊ - LÃNH ĐẠO</a></li>
                                             <li><a href="">MARKETING - BÁN HÀNG</a></li>
                                             <li><a href="">NHÂN VẬT - BÀI HỌC KINH DOANH</a></li>
                                             <li><a href="">PHÂN TÍCH KINH TẾ</a></li>
                                             <li><a href="">KHỞI NGHIỆP - LÀM GIÀU</a></li>
                                             <li><a href="">CHỨNG KHOÁN - BẤT ĐỘNG SẢN - ĐẦU TƯ</a></li>
                                             <li><a href="">NHÂN SỰ - VIỆC LÀM</a></li>
-                                            <li><a href="">TÀI CHÍNH - KẾ TOÁN - TIỀN TỆ</a></li>
+                                            <li><a href="" style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">TÀI CHÍNH - KẾ TOÁN - TIỀN TỆ</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Tâm Lý - Kỹ Năng Sống</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">KỸ NĂNG SỐNG</a></li>
+                                            <li><a href="" style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">KỸ NĂNG SỐNG</a></li>
                                             <li><a href="">TÂM LÝ</a></li>
                                             <li><a href="">RÈN LUYỆN NHÂN CÁCH</a></li>
                                             <li><a href="">SÁCH CHO TUỔI MỚI LỚN</a></li>
-                                            <li><a href="">HƯỚNG NGHIỆP & PHÁT TRIỂN BẢN THÂN</a></li>
+                                            <li><a href="" style="height:20px;padding: 0px;padding-left: 15px;margin-top: 10px">HƯỚNG NGHIỆP & PHÁT TRIỂN BẢN THÂN</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Nuôi Dạy Con</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">DÀNH CHO MẸ BẦU</a></li>
+                                            <li><a href="" style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">DÀNH CHO MẸ BẦU</a></li>
                                             <li><a href="">CẨM NANG LÀM CHA MẸ</a></li>
-                                            <li><a href="">DINH DƯỠNG - SỨC KHỎE CHO TRẺ</a></li>
+                                            <li><a href="" style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">DINH DƯỠNG - SỨC KHỎE CHO TRẺ</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Tiểu Sử - Hồi Ký</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">CÂU CHUYỆN CUỘC ĐỜI</a></li>
-                                            <li><a href="">NGHỆ THUẬT - GIẢI TRÍ</a></li>
+                                            <li><a href="" style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">CÂU CHUYỆN CUỘC ĐỜI</a></li>
+                                            <li><a href="" style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">NGHỆ THUẬT - GIẢI TRÍ</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Giáo Khoa - Giáo Trình - Tham Khảo</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">SÁCH GIÁO KHOA - SÁCH THAM KHẢO DÀNH CHO HỌC SINH TIỂU HỌC -
+                                            <li><a href="" style="height: 50px;;padding: 0px;padding-left: 15px;margin-top: 0px">SÁCH GIÁO KHOA - SÁCH THAM KHẢO DÀNH CHO HỌC SINH TIỂU HỌC -
                                                     CẤP 1</a></li>
                                             <li><a href="">SÁCH GIÁO KHOA - SÁCH THAM KHẢO DÀNH CHO HỌC SINH THCS - CẤP
                                                     2</a></li>
                                             <li><a href="">GIÁO TRÌNH ĐẠI HỌC - CAO ĐẲNG</a></li>
-                                            <li><a href="">SÁCH GIÁO KHOA - SÁCH THAM KHẢO DÀNH CHO HỌC SINH THPT - CẤP
+                                            <li><a href="" style="height:30px;padding: 0px;padding-left: 15px;margin-top: 10px">SÁCH GIÁO KHOA - SÁCH THAM KHẢO DÀNH CHO HỌC SINH THPT - CẤP
                                                     3</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Sách Học Ngoại Ngữ</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">TIẾNG ANH</a></li>
+                                            <li><a href="" style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">TIẾNG ANH</a></li>
                                             <li><a href="">TIẾNG NHẬT</a></li>
                                             <li><a href="">TIẾNG ĐỨC</a></li>
                                             <li><a href="">TIẾNG NGA</a></li>
                                             <li><a href="">TIẾNG HÀN</a></li>
                                             <li><a href="">TIẾNG TRUNG</a></li>
                                             <li><a href="">TIẾNG PHÁP</a></li>
-                                            <li><a href="">NGÔN NGỮ KHÁC</a></li>
+                                            <li><a href="" style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">NGÔN NGỮ KHÁC</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Lịch Sử - Địa Lý</a></li>
                                     <li><a href="">Khoa Học Kỹ Thuật</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">KIẾN THỨC KHOA HỌC - TỰ NHIÊN</a></li>
+                                            <li><a href="" style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">KIẾN THỨC KHOA HỌC - TỰ NHIÊN</a></li>
                                             <li><a href="">BÁCH KHOA -TRI THỨC</a></li>
                                             <li><a href="">CÔNG NGHỆ THÔNG TIN</a></li>
                                             <li><a href="">Y HỌC</a></li>
                                             <li><a href="">TOÁN HỌC</a></li>
-                                            <li><a href="">KHOA HỌC KHÁC</a></li>
+                                            <li><a href="" style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">KHOA HỌC KHÁC</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Ẩm Thực - Nữ Công Gia Chánh</a></li>
@@ -173,12 +173,12 @@
                                     <li><a href="">Làm Vườn - Thú Nuôi</a></li>
                                     <li><a href="">Tôn Giáo - Tâm Linh</a>
                                         <ul class="sub-menu">
-                                            <li><a href="">PHẬT GIÁO</a></li>
+                                            <li><a href="" style="height: 20px;;padding: 0px;padding-left: 15px;margin-top: 0px">PHẬT GIÁO</a></li>
                                             <li><a href="">THIÊN CHÚA GIÁO</a></li>
-                                            <li><a href="">TÔN GIÁO HỌC</a></li>
+                                            <li><a href="" style="height:10px;padding: 0px;padding-left: 15px;margin-top: 10px">TÔN GIÁO HỌC</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="">Phong Thủy - Kinh Dịch - Chiêm Tinh</a></li>
+                                    <li><a href=""style="padding: 0px;padding-left: 15px;margin-top: 10px;">Phong Thủy - Kinh Dịch - Chiêm Tinh</a></li>
                                 </ul>
                             </li>
                             <li><a href="">Sách Giới Hạn</a></li>
@@ -201,7 +201,7 @@
                                 </ul>
                             </li>
                             <li><a href="">Đồ Trang Trí - Lưu Niệm</a></li>
-                            <li><a href="">Gợi Ý Quà Tặng</a></li>
+                            <li><a href="#" style="height: 15px;padding: 0px;padding-left: 15px;margin-top: 2px; padding-top: 5px;">Gợi Ý Quà Tặng</a></li>
                         </ul>
                     </li>
                 </ul>
