Trang Sach Theo Danh Muc

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                         <img src="HinhAnh/icons8-list-50.png"
                             style="width: 30px; height: 30px;margin-top: 7px;float: left;">
                         <a href="#" style="color: #f3f3f3;width: 150px; margin-left: 60px;">Danh Mục Sách</a>
-                        <ul class="sub-menu">
-                            <li><a href="#" style="padding: 0px; padding-left: 15px;padding-bottom: 5px;">Sách Tiếng Việt</a>
-                                <ul class="sub-menu">
+                        <ul class="sub-menu" style="display: block;border: 0.5px;">
+                            <li><a href="#" style="padding: 0px; padding-left: 15px;padding-bottom: 5px;">Sách Bán Chạy</a>
+                                <ul class="sub-menu" style="border: 0.5px;">
                                     <li><a href="#" style="padding: 0px;padding-left: 15px;padding-bottom: 5px;">Văn Học</a>
-                                        <ul class="sub-menu">
+                                        <ul class="sub-menu" style="border: 0.5px;">
                                             <li><a href="" style="height: 20px;padding: 0px;padding-left: 15px;margin-top: 0px;">Tác Phẩm Kinh Điển</a></li>
                                             <li><a href="">Tiểu Thuyết</a></li>
                                             <li><a href="">Truyện Ngắn - Tản Văn - Tạp Văn</a></li>
@@ -181,27 +181,35 @@
                                     <li><a href=""style="padding: 0px;padding-left: 15px;margin-top: 10px;">Phong Thủy - Kinh Dịch - Chiêm Tinh</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Sách Giới Hạn</a></li>
-                            <li><a href="">Sách Ngoại Văn</a></li>
-                            <li><a href="">Văn Phòng Phẩm</a>
+                            <li><a href="">Sách Mới Phát Hành</a></li>
+                            <li><a href="">Sách Sắp Phát Hành</a></li>
+                            <li><a href="">Sách Ngoại Văn</a>
                                 <ul class="sub-menu">
-                                    <li><a href="">Bút - Viết</a></li>
+                                    <li><a href="" style="padding: 0px;padding-left: 15px;padding-bottom: 5px;">Bút - Viết</a></li>
                                     <li><a href="">Dụng Cụ Học Sinh</a></li>
                                     <li><a href="">Sản Phẩm Về Giấy</a></li>
                                     <li><a href="">Dụng Cụ Văn Phòng</a></li>
                                     <li><a href="">Dụng Cụ Vẽ</a></li>
                                     <li><a href="">Sản Phẩm Điện Tử</a></li>
-                                    <li><a href="">Văn Phòng Phẩm Khác</a></li>
+                                    <li><a href="" style="height: 15px;padding: 0px;padding-left: 15px;margin-top: 2px; padding-top: 5px;">Văn Phòng Phẩm Khác</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Đồ Chơi</a>
+                            <li><a href="">Sách Blockchain</a>
                                 <ul class="sub-menu">
-                                    <li><a href="">Xếp Hình - Lắp Ghép</a></li>
-                                    <li><a href="">Ôtô - Tàu - Thuyền - Máy Bay</a></li>
+                                    <li><a href="" style="padding: 0px;padding-left: 15px;padding-bottom: 5px;">Xếp Hình - Lắp Ghép</a></li>
+                                    <li><a href="" style="height: 15px;padding: 0px;padding-left: 15px;margin-top: 2px; padding-top: 5px;">Ôtô - Tàu - Thuyền - Máy Bay</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Đồ Trang Trí - Lưu Niệm</a></li>
-                            <li><a href="#" style="height: 15px;padding: 0px;padding-left: 15px;margin-top: 2px; padding-top: 5px;">Gợi Ý Quà Tặng</a></li>
+                            <li><a href="">Sách Kinh Tế</a></li>
+                            <li><a href="">Sách Văn Học Trong Nước</a></li>
+                            <li><a href="">Sách Văn Học Nước Ngoài</a></li>
+                            <li><a href="">Sách Thường Thức - Đời Sống</a></li>
+                            <li><a href="">Sách Thiếu Nhi</a></li>
+                            <li><a href="">Sách Phát Triển Bản Thân</a></li>
+                            <li><a href="">Sách Tin Học - Ngoại Ngữ</a></li>
+                            <li><a href="">Sách Chuyên Ngành</a></li>
+                            <li><a href="">Sách Giáo Khoa - Giáo Trình</a></li>
+                            <li><a href="#" style="height: 15px;padding: 0px;padding-left: 15px;margin-top: 2px; padding-top: 5px;">Tạp chí - Văn Phòng Phẩm</a></li>
                         </ul>
                     </li>
                 </ul>
