Trang chu, Trang chi tiet va Trang gio hang

--- a/GioHang.html
+++ b/GioHang.html
@@ -159,7 +159,7 @@
         </div>
         <div id="box_bt_payment">
             <a id="bt_thanh_toan" href="#">THANH TOÁN</a>
-            <a id="bt_quay_lai" href="#">QUAY LẠI</a>
+            <a id="bt_quay_lai" href="#" onclick="ChSoLuong('tongSP')">QUAY LẠI</a>
         </div>
         <div id="buy-amount1" style="opacity: 0;">
             <button class="minus-btn" onclick="sub('amount')">
@@ -183,5 +183,9 @@
     <script>
         showgiohang();
     </script>
+     <script src="index.js"></script>
+     <script>
+         showgiohang1();
+     </script>
     
 </body>
