--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                         </div>
                         <div class="add_to_cart">
                             
-                            <input type="button" class="button_cart" name="fname" onclick="themvaogiohangCH1('item-photo','product-name','product_price','soSP1')" value="Mua ngay">
+                            <input type="button" class="button_cart" name="fname" onclick="themvaogiohangCH1('item-photo','product-name','product_price','soSP1'); tuCongSoLuong(); tuCongSoTien('product_price');" value="Mua ngay">
                         </div>
                         <a href="" style="opacity: 0;width: 1px;height: 1px;" id="soSP1">1</a>
                     </div>
@@ -791,7 +791,7 @@
 
                         </div>
                         <div class="add_to_cart">
-                            <input type="button" class="button_cart" name="fname" onclick="themvaogiohangCH1('item-photo1','product-name1','product_price1','soSP2')" value="Mua ngay">
+                            <input type="button" class="button_cart" name="fname" onclick="themvaogiohangCH1('item-photo1','product-name1','product_price1','soSP2'); tuCongSoLuong(); tuCongSoTien('product_price1');" value="Mua ngay">
                         </div>
                         <a href="" style="opacity: 0;width: 1px;height: 1px;" id="soSP2">1</a>
                     </div>
@@ -1237,7 +1237,7 @@
                             <span id="product_price2" style="opacity: 0;">74760</span>
                         </div>
                         <div class="add_to_cart">
-                            <input type="button" class="button_cart" name="fname" onclick="themvaogiohangCH1('item-photo2','product-name2','product_price2','soSP3')" value="Mua ngay">
+                            <input type="button" class="button_cart" name="fname" onclick="themvaogiohangCH1('item-photo2','product-name2','product_price2','soSP3'); tuCongSoLuong(); tuCongSoTien('product_price2');" value="Mua ngay">
                         </div>
                         <a href="" style="opacity: 0;width: 1px;height: 1px;" id="soSP3">1</a>
                     </div>
