--- a/ThanhToan.html
+++ b/ThanhToan.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div id="box_bt_payment">
-                    <a id="bt_thanh_toan" href="#">THANH TOÁN</a>
+                    <a id="bt_thanh_toan" href="ThanhToanHinhThuc.html">TIẾP TỤC</a>
                     <a id="bt_quay_lai" href="#">QUAY LẠI</a>
                 </div>
             </div>
